# MiniPC

kicad/: .gitignore
kicad/pc/v0.2/: MiniPC.kicad_pcb  MiniPC.kicad_pro  MiniPC.kicad_sch
kicad/pmod/rs232/: rs232.kicad_pcb  rs232.kicad_pro  rs232.kicad_sch
kicad/v0.1/: MiniPC.kicad_pcb  MiniPC.kicad_sch
src/esp/: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
src/esp/main/: CMakeLists.txt  Kconfig  WEB_API.md  button.cpp  event.cpp  fat.cpp  flash.cpp  fpga.cpp  http_server_handlers.cpp  index.html  jtag.cpp  led.cpp  main.cpp  programmer.cpp  serial.cpp  spi.cpp  upload_receiver.cpp  wifi.cpp  ws2812b.cpp  ws2812b.h
src/esp/main/include/: button.h  event.h  fat.h  flash.h  fpga.h  http_server_handlers.h  jtag.h  programmer.h  serial.h  spi.h  upload_receiver.h  wifi.h
src/esp/tools/mock_server/: README.md  requirements.txt  server.py  (+1 more)
src/fpga/: MiniPC.gprj  README
src/fpga/c_code/: .gitignore  Makefile  main.c
src/fpga/flash-bridge/: bridge.gprj
src/fpga/impl/: MiniPC_process_config.json
src/fpga/src/: display.v  mem_init0.ini  mem_init1.ini  mem_init2.ini  mem_init3.ini  primer20k.cst  psram.v  spi.v  top.v
src/tos/: .gitignore  MakeVars  Makefile
src/tos/include/: kernel.h  stdarg.h  uart.h
src/tos/kernel/: Makefile  assert.c  com.c  dispatch.c  intr.c  irq.s  keyb.c  linker.ld  main.c  malloc.c  pong.c  process.c  shell.c  startup.s  train.c  uart.c  vga.c  vga_test.c  window.c  wm.c
src/tos/test/: Makefile  common.c  lib.c  run_tests.c  test_com_1.c  test_frame_1.c  test_isr_2.c  test_isr_3.c  test_window_5.c
(+36 files in other folders)
